feat: 增加资料保全管理接口
